--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>My Simple website</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit eius beatae, eveniet id, nobis sint aut, exercitationem iusto quaerat quam perspiciatis optio ex velit aspernatur corrupti odio earum minima impedit.</p>
 </body>
 </html>
