styles.css added and cool

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
+    <div>
+        <h3>My first website</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum eius placeat perferendis dolore iusto quas et molestiae nam modi provident accusamus adipisci fuga dignissimos, assumenda pariatur non illo minus error.</p>
+    </div>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit eius beatae, eveniet id, nobis sint aut, exercitationem iusto quaerat quam perspiciatis optio ex velit aspernatur corrupti odio earum minima impedit.</p>
+    <h3>Fuad Hasan Ishtiyak </h3>
+
 </body>
 </html>
