--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     </div>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit eius beatae, eveniet id, nobis sint aut, exercitationem iusto quaerat quam perspiciatis optio ex velit aspernatur corrupti odio earum minima impedit.</p>
     <h3>Fuad Hasan Ishtiyak </h3>
+    <div>
+        <h2>Live website </h2>
+        <p>settings/main/then</p>
+        <img src="images/live website.jpg" alt="" width="350px" height="300px">
+    </div>
 
 </body>
 </html>
